--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@ body {
     text-align: center;
     border-top: 1px solid;
 }
-
+#burguer {
+    background-color: rgb(0, 0, 0);
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    }
+    #menu {
+    display: none;
+    }
 
     
